Bug 318838 - Search Results don't understand true size when sorted
Summary: Search Results don't understand true size when sorted
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-25 08:29 UTC by Roger Pixley
Modified: 2013-04-25 11:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roger Pixley 2013-04-25 08:29:36 UTC
When doing a Search in Kmail the results can be sorted by different columns. If you are sorting the column size then the list is purely driven by the first number such that 2 GiB is considered smaller than 4 Mib which in turn is smaller than 8 Kib.

Reproducible: Always

Steps to Reproduce:
1. Press S to initiate a search
2. Search to generate a number of results. (this may vary depending on your inbox and search term)
3. Scroll to the Size column and click on the header to sort by size.
Actual Results:  
Scroll to the top or bottom and look at the arrangement of email sizes. 
They will be arranged purely on a number basis irregardless of the amount of data after the shortened number.

Expected Results:  
Scroll to the top or bottom.

The largest email in terms of data size should be at one end and the smallest at the other.
Comment 1 Laurent Montel 2013-04-25 09:58:11 UTC
I confirm it.
Will fix soon.
Comment 2 Laurent Montel 2013-04-25 11:02:04 UTC
Git commit 582666ff33a59ab4730108779bb98ee22f67209e by Montel Laurent.
Committed on 25/04/2013 at 13:01.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 318838 - Search Results don't understand true size when sorted

FIXED-IN: 4.10.3

M  +17   -2    kmail/kmsearchfilterproxymodel.cpp
M  +4    -1    kmail/kmsearchmessagemodel.cpp
M  +2    -1    kmail/kmsearchmessagemodel.h
M  +1    -0    kmail/searchwindow.cpp

http://commits.kde.org/kdepim/582666ff33a59ab4730108779bb98ee22f67209e