Fix Bug 318838 - Search Results don't understand true size when sorted

FIXED-IN: 4.10.3
BUG: 318838